--- a/diem-node/Cargo.toml
+++ b/diem-node/Cargo.toml
@@ -16,7 +16,6 @@ jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_
 structopt = "0.3.21"
 tokio = { version = "1.3.0", features = ["full"] }
 tokio-stream = "0.1.4"
-
 backup-service = { path = "../storage/backup/backup-service" }
 consensus = { path = "../consensus" }
 crash-handler = { path = "../common/crash-handler" }
@@ -48,3 +47,7 @@ subscription-service = { path = "../common/subscription-service" }
 default = []
 assert-private-keys-not-cloneable = ["diem-crypto/assert-private-keys-not-cloneable"]
 failpoints = ["fail/failpoints", "consensus/failpoints", "executor/failpoints", "diem-json-rpc/failpoints", "diem-mempool/failpoints", "state-sync/failpoints"]
+
+
+[profile.release]
+debug = true
