--- a/Cargo.toml
+++ b/Cargo.toml
@@ -224,6 +224,7 @@ opt-level = 'z'     # Optimize for size.
 lto = true          # Enable Link Time Optimization
 codegen-units = 1   # Reduce number of codegen units to increase optimizations.
 panic = 'abort'     # Abort on panic
+debug = true        # Include debug symbols
 
 [profile.bench]
 debug = true
