wip scaffolding a direct write to offline database

--- a/ol/cli/Cargo.toml
+++ b/ol/cli/Cargo.toml
@@ -67,6 +67,8 @@ move-binary-format = { path = "../../language/move-binary-format" }
 dialoguer = "0.8.0"
 diem-crypto = { path = "../../crypto/crypto" }
 
+move-vm-runtime = { path = "../../language/move-vm/runtime" }
+
 
 # Parity with Storage create
 [dependencies.rocksdb]
